<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subject_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/spSubNameConfExam"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.9"
                android:background="@drawable/my_shape_ractanglee"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/date"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDateConfExam"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.9"
                android:background="@drawable/my_shape_ractanglee"
                android:gravity="center"
                android:hint="@string/dateToday" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvTimeConfExam"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/my_shape_ractanglee"
                android:gravity="center"
                android:hint="@string/class_start_time" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/duration"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/etDurationConfExam"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/my_shape_ractanglee"
                android:gravity="center"
                android:hint="@string/durationMinute"
                android:inputType="number"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20sp"
            android:gravity="end">

            <ImageButton
                android:id="@+id/ivSaveConfExam"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginEnd="10sp"
                android:background="@drawable/save_floppy" />
        </LinearLayout>

        <ListView
            tools:listitem="@layout/list_row_exam"
            android:id="@+id/lvConfExam"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>
